force-app/main/default/objects/Lead/fields/Average_Order_Volume__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Volume__c</fullName>
    <label>Average Order Volume</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>