force-app/main/default/objects/Lead/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restaurant Group</fullName>
            </value>
            <value>
                <fullName>Food Chain</fullName>
            </value>
            <value>
                <fullName>Franchise Owner</fullName>
            </value>
            <value>
                <fullName>Independent Vendor</fullName>
            </value>
            <value>
                <fullName>Ghost Kitchen</fullName>
            </value>
            <value>
                <fullName>Food Truck</fullName>
            </value>
            <value>
                <fullName>Caterer</fullName>
            </value>
            <value>
                <fullName>Convenience Store</fullName>
            </value>
            <value>
                <fullName>Grocery Store</fullName>
            </value>
            <value>
                <fullName>Corporate Client</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>