force-app/main/default/objects/Lead/fields/Cuisine_Type__c.field-meta.xml
<CustomField>
    <fullName>Cuisine_Type__c</fullName>
    <label>Cuisine Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Mediterranean</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Seafood</fullName>
            </value>
            <value>
                <fullName>Desserts</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Caribbean</fullName>
            </value>
            <value>
                <fullName>Middle Eastern</fullName>
            </value>
            <value>
                <fullName>BBQ</fullName>
            </value>
            <value>
                <fullName>Gluten-Free</fullName>
            </value>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Coffee and Tea</fullName>
            </value>
            <value>
                <fullName>Fast Food</fullName>
            </value>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Pizza</fullName>
            </value>
            <value>
                <fullName>Burgers</fullName>
            </value>
            <value>
                <fullName>Sandwiches</fullName>
            </value>
            <value>
                <fullName>Sushi</fullName>
            </value>
            <value>
                <fullName>Breakfast and Brunch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>