force-app/main/default/objects/Lead/fields/Current_Delivery_Partners__c.field-meta.xml
<CustomField>
    <fullName>Current_Delivery_Partners__c</fullName>
    <label>Current Delivery Partners</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Uber Eats</fullName>
            </value>
            <value>
                <fullName>DoorDash</fullName>
            </value>
            <value>
                <fullName>Grubhub</fullName>
            </value>
            <value>
                <fullName>Postmates</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>