force-app/main/default/objects/Lead/fields/DBA_Doing_Business_As_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Doing_Business_As_Name__c</fullName>
    <description>Merchant&apos;s DBA (Doing Business As) Name</description>
    <label>DBA (Doing Business As) Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>