force-app/main/default/objects/Lead/fields/Delivery_Capability__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Capability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Capability</label>
    <type>Checkbox</type>
</CustomField>