force-app/main/default/objects/Lead/fields/IsConverted_Boolean__c.field-meta.xml
<CustomField>
    <fullName>IsConverted_Boolean__c</fullName>
    <formula>IsConverted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsConverted(Boolean)</label>
    <type>Checkbox</type>
</CustomField>