force-app/main/default/objects/Lead/fields/Lead_Conversion_Probability__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Probability__c</fullName>
    <label>Lead Conversion Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>