force-app/main/default/objects/Lead/fields/Menu_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Menu_Pricing__c</fullName>
    <label>Menu Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$ (Under $15/pp)</fullName>
            </value>
            <value>
                <fullName>$$ ($16-50/pp)</fullName>
            </value>
            <value>
                <fullName>$$$ ($51-100/pp)</fullName>
            </value>
            <value>
                <fullName>$$$$ (Over $100/pp)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>