force-app/main/default/objects/Lead/fields/Merchant_Comments__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Comments__c</fullName>
    <label>Merchant Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>