force-app/main/default/objects/Lead/fields/POS_System__c.field-meta.xml
<CustomField>
    <fullName>POS_System__c</fullName>
    <label>POS System Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Toast</fullName>
            </value>
            <value>
                <fullName>Clover</fullName>
            </value>
            <value>
                <fullName>Revel</fullName>
            </value>
            <value>
                <fullName>Lightspeed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>