force-app/main/default/objects/Lead/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <label>Service Area (Miles)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>